- bios/clock.c: removed old commented-out code (LVL)
- removed unused bdos/bdos.h (LVL)
- bdos/proc.c: setjmp warnings avoided by turning params into static vars (LVL)
- updated doc/install.txt (LVL)
- removed [ OK ] in initinfo, expanded abbreviated messages, and modified
  fr.po and de.po (LVL)
- bios/floppy.c: some untested unique FDC track register bookkeeping (LVL)
- made ramtop and ramvalid visible from C code (LVL)

19. Jan. 2002
- experimental autodetect ARAnyM or STonX native print (activated in 
  bios/config.h) (LVL)
- new setjmp/longjmp replacing older ones (LVL)
- updated todo list (LVL)
- started fastram support in bdos (LVL)
- fixed some function prototypes in bios.c (LVL)
- removed cli/Makefile (LVL)
- implemented the font_ring as 3 lists of linked fontheaders (MAD)
- documented all tosvars in bios/tosvar.h till 0x5b0 (MAD)

20. Jan. 2002
- in bios/lineainit.c there is now the sysfonts array for linea.
  font_ring is not longer used by linea (MAD).
- keyboard reset (Alt+Ctrl+Del(+RShift)) implemented (joy)
- trying to get 16-bit sector number working in BDOS - one workaround
  in fsbuf.c makes DIR (fsfirst/fsnext) working correctly (it seems).
  The NEGATIVE_RECN value (currently -200) should be fixed when it will be
  clear what is FAT/DIR negative recn and what is unsigned recn in signed int.
  FAT traversing seems to be broken (Pexec fails for some files) (joy)
- blkdev.h: retrying in emulator is not necessary (joy)
- blkdev.c: 16-bit recn should work now (joy)

21. Jan. 2002
- in bios/lineainit.c: removed font_ring initialization (MAD)
- re-wrote completely Pexec() for header flags support. I kept the old routine
  for reference, but ultimately it will go away. Fastram is allocated when 
  requested but it is still not freed (the *term routines in proc need to
  be changed as well); Pexec() flag 6 supported. I did not test on Fastram but
  all of autoexec, EmuCON, loading progs from C: and A: work. (LVL)