@@ -32,6 +32,13 @@ extern  MPB     pmd;    /* the mem pool for the main user ST ram */
 extern  MPB     pmdtt;  /* the memory pool for the alternative TT ram */
 extern  int     has_ttram; /* 1 if alternative RAM has been declared to BDOS */
 
+/*
+ * these should be internal
+ */
+
+extern long start_stram;
+extern long end_stram;
+
 /* 
  * in osmem.c
  */
